--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chúc Mừng Sinh Nhật Bé Cá Voi 🐳</title>
 
-  <!-- Link tới Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Pacifico&family=Quicksand:wght@400;500&display=swap" rel="stylesheet">
+  <!-- Link tới Google Fonts (Font viết tay tiếng Việt) -->
+  <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
 
   <style>
     /* Cài đặt màu chủ đạo từ trắng sang xanh nước biển */
     body {
-      font-family: 'Quicksand', sans-serif;
+      font-family: 'Cookie', cursive;
       background: linear-gradient(to bottom, #ffffff, #00bcd4);
       color: white;
       text-align: center;
@@ -19,12 +19,6 @@
       padding: 0;
       height: 100vh;
       overflow: hidden;
-    }
-
-    h1, p {
-      font-family: 'Dancing Script', cursive;
-      font-size: 2.5em;
-      color: #ffffff;
     }
 
     /* Trang 1 - Hộp quà động */
@@ -57,7 +51,7 @@
       top: 60%;
       left: 50%;
       transform: translateX(-50%);
-      font-size: 1.2em;
+      font-size: 1.5em;
       color: white;
     }
 
@@ -84,9 +78,9 @@
 
     /* Hiệu ứng nhấp nháy cho Happy Birthday */
     .happy-birthday {
-      font-family: 'Pacifico', cursive;
+      font-family: 'Cookie', cursive;
       font-size: 3em;
-      color: #ff4081;
+      color: #00bcd4;
       animation: blink 1s infinite;
     }
 
@@ -139,7 +133,7 @@
 <!-- Trang 3: Hình ảnh và lời chúc Happy Birthday -->
 <div id="page3" class="page" style="display: none;">
   <div class="img-container">
-    <img src="https://example.com/happy-birthday-image.jpg" alt="Happy Birthday">
+    <img src="https://drive.google.com/uc?export=view&id=1cOn3UuQqor7ZHSKoAUTEifyq_SoCF1Ih" alt="Happy Birthday Image">
   </div>
   <div class="happy-birthday">Happy Birthday!</div>
 </div>
