--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="cake-animation">
-            <img src="https://via.placeholder.com/200x200.png?text=Cake" alt="Bánh Sinh Nhật" id="cake">
+            <img src="https://pin.it/34KSsJUoE" alt="Bánh Sinh Nhật" id="cake">
         </div>
         
         <h1 id="happyBirthday" class="happy-birthday">Happy Birthday!</h1>
