--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chúc Mừng Sinh Nhật Bé Cá Voi</title>
-    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <!-- Liên kết font chữ Dance Script từ Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Dance+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="cake-animation">
-            <img src="image/chu hpbd.jpg" alt="Bánh Sinh Nhật" id="cake">
+            <img src="images/cake.png" alt="Bánh Sinh Nhật" id="cake">
         </div>
         
         <h1 id="happyBirthday" class="happy-birthday">Happy Birthday!</h1>
