--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="cake-animation">
-            <img src="images/cake.png" alt="Bánh Sinh Nhật" id="cake">
+            <img src="images/chu hpbd.jpg" alt="Bánh Sinh Nhật" id="cake">
         </div>
         
         <h1 id="happyBirthday" class="happy-birthday">Happy Birthday!</h1>
