--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="container">
         <div class="cake-animation">
-            <img src="images/chu hpbd.jpg" alt="Bánh Sinh Nhật" id="cake">
+            <img src="images/chu hpbd.jpg" alt="HPBD" id="chu hpbd">
         </div>
         
-        <h1 id="happyBirthday" class="happy-birthday">Happy Birthday!</h1>
+        <h1 id="happyBirthday" >Happy Birthday!</h1>
         
         <div class="message">
             <p>Chúc anh tuổi tác +1, niềm vui +10, tinh thần +100, sức khỏe +1000.</p>
