--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="cake-animation">
+        <div class="chu hpbd">
             <img src="images/chu hpbd.jpg" alt="HPBD" id="chu hpbd">
         </div>
         
