--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="chu hpbd">
-            <img src="images/chu hpbd.jpg" alt="HPBD" id="chu hpbd">
+        <div class="chu-hpbd">
+            <img src="images/chu-hpbd.jpg" alt="HPBD" id="chu hpbd">
         </div>
         
         <h1 id="happyBirthday" >Happy Birthday!</h1>
