--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="chu-hpbd">
-            <img src="images/chu-hpbd.jpg" alt="HPBD" id="chu hpbd">
+            <img src="images/chu-hpbd.jpg" alt="HPBD" id="chu-hpbd">
         </div>
         
         <h1 id="happyBirthday" >Happy Birthday!</h1>
